cbm/src/store/store.h

/* ── Opaque handle ──────────────────────────────────────────────── */

typedef struct cbm_store cbm_store_t;
/* Result of a source-preserving integrity verification. The verifier freezes
 * the complete source DB/WAL/SHM family before use. A sidecar-free database may
 * reuse a prior full verification only through an atomically published receipt
 * bound to its exact bytes, SQLite build, schema, contract, and project; all
 * other generations are inspected through a separate verified snapshot. */
typedef enum {
    CBM_STORE_VERIFY_OK = 0,
    CBM_STORE_VERIFY_SOURCE_MISSING = 1,
    CBM_STORE_VERIFY_INTEGRITY_FAILED = 2,
    CBM_STORE_VERIFY_IO_FAILED = 3,
} cbm_store_verify_status_t;
enum {
    CBM_STORE_VERIFY_OPERATION_MAX = 64,
    CBM_STORE_VERIFY_DETAIL_MAX = 512,
    CBM_STORE_VERIFY_PATH_MAX = 4096,
};
/* Exact physical close result.  Every field crossing the C/Rust boundary has
 * an explicit width; callers must key behavior on status and
 * connection_destroyed rather than inferring closure from pointer ownership.
 * A close can report cached-statement execution/finalize errors even when the
 * underlying SQLite connection was physically destroyed successfully. */
typedef int32_t cbm_store_close_status_t;
enum {
    CBM_STORE_CLOSE_OK = 0,
    CBM_STORE_CLOSE_FINALIZE_FAILED = 1,
    CBM_STORE_CLOSE_OUTSTANDING_STATEMENTS = 2,
    CBM_STORE_CLOSE_FAILED = 3,
    CBM_STORE_CLOSE_INVALID_ARGUMENT = 4,
    CBM_STORE_CLOSE_ABI_VERSION = 1,
    CBM_STORE_CLOSE_CACHED_STATEMENT_COUNT = 34,
    CBM_STORE_CLOSE_STATEMENT_NAME_MAX = 64,
    CBM_STORE_CLOSE_SQL_TEXT_MAX = 512,
    CBM_STORE_CLOSE_SQL_SHA256_MAX = 65,
};
typedef struct {
    int32_t sqlite_error;
    char statement_name[CBM_STORE_CLOSE_STATEMENT_NAME_MAX];
} cbm_store_finalize_error_t;
typedef struct {
    uint32_t abi_version;
    uint32_t struct_size;
    cbm_store_close_status_t status;
    int32_t sqlite_close_code;
    uint32_t connection_was_present;
    uint32_t close_attempted;
    uint32_t connection_destroyed;
    uint32_t db_path_truncated;
    uint64_t db_path_bytes;
    uint32_t cached_statement_count;
    uint32_t finalize_error_count;
    cbm_store_finalize_error_t
        finalize_errors[CBM_STORE_CLOSE_CACHED_STATEMENT_COUNT];
    uint64_t outstanding_statement_count;
    uint64_t first_outstanding_sql_bytes;
    uint32_t first_outstanding_sql_available;
    uint32_t first_outstanding_sql_truncated;
    char first_outstanding_sql_sha256[CBM_STORE_CLOSE_SQL_SHA256_MAX];
    char first_outstanding_sql[CBM_STORE_CLOSE_SQL_TEXT_MAX];
    char db_path[CBM_STORE_VERIFY_PATH_MAX];
} cbm_store_close_result_t;
/* Existing-writer journal normalization result.  This transaction deliberately
 * does not close the store: its caller must consume this result and then use
 * cbm_store_close so connection destruction remains one independent proof. */
typedef int32_t cbm_store_normalize_status_t;
enum {
    CBM_STORE_NORMALIZE_OK = 0,
    CBM_STORE_NORMALIZE_INVALID_ARGUMENT = 1,
    CBM_STORE_NORMALIZE_READ_ONLY = 2,
    CBM_STORE_NORMALIZE_JOURNAL_READ_FAILED = 3,
    CBM_STORE_NORMALIZE_UNSUPPORTED_JOURNAL_MODE = 4,
    CBM_STORE_NORMALIZE_CHECKPOINT_FAILED = 5,
    CBM_STORE_NORMALIZE_CHECKPOINT_INCOMPLETE = 6,
    CBM_STORE_NORMALIZE_SET_DELETE_FAILED = 7,
    CBM_STORE_NORMALIZE_READBACK_FAILED = 8,
    CBM_STORE_NORMALIZE_ABI_VERSION = 1,
    CBM_STORE_NORMALIZE_MODE_MAX = 16,
};
typedef struct {
    uint32_t abi_version;
    uint32_t struct_size;
    cbm_store_normalize_status_t status;
    int32_t sqlite_error;
    int32_t wal_log_frames;
    int32_t wal_checkpointed_frames;
    int32_t wal_remaining_frames;
    char journal_mode_before[CBM_STORE_NORMALIZE_MODE_MAX];
    char journal_mode_after[CBM_STORE_NORMALIZE_MODE_MAX];
    char operation[CBM_STORE_VERIFY_OPERATION_MAX];
    char detail[CBM_STORE_VERIFY_DETAIL_MAX];
} cbm_store_normalize_result_t;
typedef struct {
    cbm_store_verify_status_t status;
    uint32_t native_error;
    int sqlite_error;
    bool db_present;
    bool wal_present;
    bool shm_present;
    bool family_frozen;
    bool family_guard_release_complete;
    bool scratch_created;
    bool scratch_cleanup_complete;
    uint32_t cleanup_native_error;
    uint64_t db_bytes;
    char db_sha256[65];
    uint64_t wal_bytes;
    char wal_sha256[65];
    char operation[CBM_STORE_VERIFY_OPERATION_MAX];
    char cleanup_operation[CBM_STORE_VERIFY_OPERATION_MAX];
    char detail[CBM_STORE_VERIFY_DETAIL_MAX];
    char scratch_path[CBM_STORE_VERIFY_PATH_MAX];
} cbm_store_verify_result_t;
/* ── Data structures ────────────────────────────────────────────── */

typedef struct {
    int64_t id;
    const char *project;
    const char *label;          /* Function, Class, Method, Module, File, ... */
    const char *name;           /* short name */
    const char *atom_id;        /* stable source-atom SHA-256 */
    const char *qualified_name; /* full dotted path */
    const char *file_path;      /* relative file path */
    int start_line;
    int end_line;
    bool source_present;
    const uint8_t *source_bytes;
    size_t source_len;
    const char *source_sha256;
    uint64_t start_byte;
    uint64_t end_byte;
    const char *properties_json; /* JSON string, NULL → "{}" */
} cbm_node_t;
typedef struct {
    int64_t id;
    const char *project;
    int64_t source_id;
    int64_t target_id;
    const char *type;            /* CALLS, HTTP_CALLS, IMPORTS, ... */
    const char *properties_json; /* JSON string, NULL → "{}" */
} cbm_edge_t;
typedef struct {
    const char *name;
    const char *indexed_at; /* ISO 8601 */
    const char *root_path;
} cbm_project_t;
typedef struct {
    const char *project;
    const char *rel_path;
    const char *sha256;
    int64_t mtime_ns;
    int64_t size;
} cbm_file_hash_t;
enum { CBM_FILE_SHA256_CAPACITY = 65 };
/* Fixed-size identity for one indexed file. Unlike cbm_file_hash_t, this is
 * caller-owned and requires no allocation or release. */
typedef struct {
    char sha256[CBM_FILE_SHA256_CAPACITY];
    int64_t mtime_ns;
    int64_t size;
} cbm_file_identity_t;