crates/cbm-sys/src/bindings.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_pipeline_row_file_hash_t {
    pub project: *const ::std::os::raw::c_char,
    pub rel_path: *const ::std::os::raw::c_char,
    pub sha256: *const ::std::os::raw::c_char,
    pub mtime_ns: i64,
    pub size: i64,
}
impl Default for cbm_pipeline_row_file_hash_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_pipeline_row_manifest_t {
    pub project: *const ::std::os::raw::c_char,
    pub node_count: usize,
    pub edge_count: usize,
    pub file_hash_count: usize,
    pub graph_schema_version: u32,
    pub index_capability: cbm_index_capability_t,
}
impl Default for cbm_pipeline_row_manifest_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type cbm_gbuf_row_node_sink_fn = ::std::option::Option<
    unsafe extern "C" fn(
        node: *const cbm_gbuf_row_node_t,
        ctx: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
pub type cbm_gbuf_row_edge_sink_fn = ::std::option::Option<
    unsafe extern "C" fn(
        edge: *const cbm_gbuf_row_edge_t,
        ctx: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
pub type cbm_pipeline_row_file_hash_sink_fn = ::std::option::Option<
    unsafe extern "C" fn(
        file_hash: *const cbm_pipeline_row_file_hash_t,
        ctx: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
pub type cbm_pipeline_row_complete_sink_fn = ::std::option::Option<
    unsafe extern "C" fn(
        manifest: *const cbm_pipeline_row_manifest_t,
        ctx: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_pipeline_row_sink_v2_t {
    pub abi_version: u32,
    pub struct_size: usize,
    pub node: cbm_gbuf_row_node_sink_fn,
    pub edge: cbm_gbuf_row_edge_sink_fn,
    pub file_hash: cbm_pipeline_row_file_hash_sink_fn,
    pub complete: cbm_pipeline_row_complete_sink_fn,
    pub ctx: *mut ::std::os::raw::c_void,
}
impl Default for cbm_pipeline_row_sink_v2_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_store {
    _unused: [u8; 0],
}
pub type cbm_store_t = cbm_store;
pub const cbm_store_verify_status_t_CBM_STORE_VERIFY_OK: cbm_store_verify_status_t = 0;
pub const cbm_store_verify_status_t_CBM_STORE_VERIFY_SOURCE_MISSING: cbm_store_verify_status_t = 1;
pub const cbm_store_verify_status_t_CBM_STORE_VERIFY_INTEGRITY_FAILED: cbm_store_verify_status_t =
    2;
pub const cbm_store_verify_status_t_CBM_STORE_VERIFY_IO_FAILED: cbm_store_verify_status_t = 3;
pub type cbm_store_verify_status_t = ::std::os::raw::c_int;
pub const CBM_STORE_VERIFY_OPERATION_MAX: _bindgen_ty_3 = 64;
pub const CBM_STORE_VERIFY_DETAIL_MAX: _bindgen_ty_3 = 512;
pub const CBM_STORE_VERIFY_PATH_MAX: _bindgen_ty_3 = 4096;
pub type _bindgen_ty_3 = ::std::os::raw::c_int;
pub type cbm_store_close_status_t = i32;
pub const CBM_STORE_CLOSE_OK: _bindgen_ty_4 = 0;
pub const CBM_STORE_CLOSE_FINALIZE_FAILED: _bindgen_ty_4 = 1;
pub const CBM_STORE_CLOSE_OUTSTANDING_STATEMENTS: _bindgen_ty_4 = 2;
pub const CBM_STORE_CLOSE_FAILED: _bindgen_ty_4 = 3;
pub const CBM_STORE_CLOSE_INVALID_ARGUMENT: _bindgen_ty_4 = 4;
pub const CBM_STORE_CLOSE_ABI_VERSION: _bindgen_ty_4 = 1;
pub const CBM_STORE_CLOSE_CACHED_STATEMENT_COUNT: _bindgen_ty_4 = 34;
pub const CBM_STORE_CLOSE_STATEMENT_NAME_MAX: _bindgen_ty_4 = 64;
pub const CBM_STORE_CLOSE_SQL_TEXT_MAX: _bindgen_ty_4 = 512;
pub const CBM_STORE_CLOSE_SQL_SHA256_MAX: _bindgen_ty_4 = 65;
pub type _bindgen_ty_4 = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_store_finalize_error_t {
    pub sqlite_error: i32,
    pub statement_name: [::std::os::raw::c_char; 64usize],
}
impl Default for cbm_store_finalize_error_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_store_close_result_t {
    pub abi_version: u32,
    pub struct_size: u32,
    pub status: cbm_store_close_status_t,
    pub sqlite_close_code: i32,
    pub connection_was_present: u32,
    pub close_attempted: u32,
    pub connection_destroyed: u32,
    pub db_path_truncated: u32,
    pub db_path_bytes: u64,
    pub cached_statement_count: u32,
    pub finalize_error_count: u32,
    pub finalize_errors: [cbm_store_finalize_error_t; 34usize],
    pub outstanding_statement_count: u64,
    pub first_outstanding_sql_bytes: u64,
    pub first_outstanding_sql_available: u32,
    pub first_outstanding_sql_truncated: u32,
    pub first_outstanding_sql_sha256: [::std::os::raw::c_char; 65usize],
    pub first_outstanding_sql: [::std::os::raw::c_char; 512usize],
    pub db_path: [::std::os::raw::c_char; 4096usize],
}
impl Default for cbm_store_close_result_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type cbm_store_normalize_status_t = i32;
pub const CBM_STORE_NORMALIZE_OK: _bindgen_ty_5 = 0;
pub const CBM_STORE_NORMALIZE_INVALID_ARGUMENT: _bindgen_ty_5 = 1;
pub const CBM_STORE_NORMALIZE_READ_ONLY: _bindgen_ty_5 = 2;
pub const CBM_STORE_NORMALIZE_JOURNAL_READ_FAILED: _bindgen_ty_5 = 3;
pub const CBM_STORE_NORMALIZE_UNSUPPORTED_JOURNAL_MODE: _bindgen_ty_5 = 4;
pub const CBM_STORE_NORMALIZE_CHECKPOINT_FAILED: _bindgen_ty_5 = 5;
pub const CBM_STORE_NORMALIZE_CHECKPOINT_INCOMPLETE: _bindgen_ty_5 = 6;
pub const CBM_STORE_NORMALIZE_SET_DELETE_FAILED: _bindgen_ty_5 = 7;
pub const CBM_STORE_NORMALIZE_READBACK_FAILED: _bindgen_ty_5 = 8;
pub const CBM_STORE_NORMALIZE_ABI_VERSION: _bindgen_ty_5 = 1;
pub const CBM_STORE_NORMALIZE_MODE_MAX: _bindgen_ty_5 = 16;
pub type _bindgen_ty_5 = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_store_normalize_result_t {
    pub abi_version: u32,
    pub struct_size: u32,
    pub status: cbm_store_normalize_status_t,
    pub sqlite_error: i32,
    pub wal_log_frames: i32,
    pub wal_checkpointed_frames: i32,
    pub wal_remaining_frames: i32,
    pub journal_mode_before: [::std::os::raw::c_char; 16usize],
    pub journal_mode_after: [::std::os::raw::c_char; 16usize],
    pub operation: [::std::os::raw::c_char; 64usize],
    pub detail: [::std::os::raw::c_char; 512usize],
}
impl Default for cbm_store_normalize_result_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_store_verify_result_t {
    pub status: cbm_store_verify_status_t,
    pub native_error: u32,
    pub sqlite_error: ::std::os::raw::c_int,
    pub db_present: bool,
    pub wal_present: bool,
    pub shm_present: bool,
    pub family_frozen: bool,
    pub family_guard_release_complete: bool,
    pub scratch_created: bool,
    pub scratch_cleanup_complete: bool,
    pub sqlite_owned_empty_wal_created: bool,
    pub cleanup_native_error: u32,
    pub db_bytes: u64,
    pub db_sha256: [::std::os::raw::c_char; 65usize],
    pub wal_bytes: u64,
    pub wal_sha256: [::std::os::raw::c_char; 65usize],
    pub operation: [::std::os::raw::c_char; 64usize],
    pub cleanup_operation: [::std::os::raw::c_char; 64usize],
    pub detail: [::std::os::raw::c_char; 512usize],
    pub scratch_path: [::std::os::raw::c_char; 4096usize],
}
impl Default for cbm_store_verify_result_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_node_t {
    pub id: i64,
    pub project: *const ::std::os::raw::c_char,
    pub label: *const ::std::os::raw::c_char,
    pub name: *const ::std::os::raw::c_char,
    pub atom_id: *const ::std::os::raw::c_char,
    pub qualified_name: *const ::std::os::raw::c_char,
    pub file_path: *const ::std::os::raw::c_char,
    pub start_line: ::std::os::raw::c_int,
    pub end_line: ::std::os::raw::c_int,
    pub source_present: bool,
    pub source_bytes: *const u8,
    pub source_len: usize,
    pub source_sha256: *const ::std::os::raw::c_char,
    pub start_byte: u64,
    pub end_byte: u64,
    pub properties_json: *const ::std::os::raw::c_char,
}
impl Default for cbm_node_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_edge_t {
    pub id: i64,
    pub project: *const ::std::os::raw::c_char,
    pub source_id: i64,
    pub target_id: i64,
    pub type_: *const ::std::os::raw::c_char,
    pub properties_json: *const ::std::os::raw::c_char,
}
impl Default for cbm_edge_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_project_t {
    pub name: *const ::std::os::raw::c_char,
    pub indexed_at: *const ::std::os::raw::c_char,
    pub root_path: *const ::std::os::raw::c_char,
    pub capability: cbm_index_capability_t,
}
impl Default for cbm_project_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct cbm_vector_state_readback_t {
    pub node_vector_count: ::std::os::raw::c_int,
    pub node_vector_min_dimension: ::std::os::raw::c_int,
    pub node_vector_max_dimension: ::std::os::raw::c_int,
    pub token_vector_count: ::std::os::raw::c_int,
    pub token_vector_min_dimension: ::std::os::raw::c_int,
    pub token_vector_max_dimension: ::std::os::raw::c_int,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_file_hash_t {
    pub project: *const ::std::os::raw::c_char,
    pub rel_path: *const ::std::os::raw::c_char,
    pub sha256: *const ::std::os::raw::c_char,
    pub mtime_ns: i64,
    pub size: i64,
}
impl Default for cbm_file_hash_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub const CBM_FILE_SHA256_CAPACITY: _bindgen_ty_6 = 65;
pub type _bindgen_ty_6 = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_file_identity_t {
    pub sha256: [::std::os::raw::c_char; 65usize],
    pub mtime_ns: i64,
    pub size: i64,
}
impl Default for cbm_file_identity_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
